# ConcentratorStudies

./: Analiser.C  Analiser.cpp  Analiser.h  CMakeLists.txt  Cluster.C  Cluster.cpp  Cluster.h  DTGeom.txt  Digi.cpp  Digi.h  README.md  Segment.cpp  Segment.h  TriggerPrimitive.C  TriggerPrimitive.cpp  TriggerPrimitive.h  outputFile.root
Cluster_displaced/: outputFile.root
config/: configPlotter.json  configPlotterBase.json
include/: Analyser.h  AnalyserBase.h  Cluster.h  Digi.h  Geometry.h  Segment.h  TestAnalyser.h  TriggerPrimitive.h
python/: cfg.py  opt.py  plotter.py  plt.py
results/: outputFile.root
src/: Analiser.cpp  Analyser.cpp  Cluster.cpp  Digi.cpp  Segment.cpp  TestAnalyser.cpp  TriggerPrimitive.cpp
